--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "latex.js": "^0.12.6",
     "mathjs": "^14.5.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-mathquill": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
